# DigitalRealEstateEngine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: app.yaml  evidence_quality.yaml  market_prefilter.yaml  scoring.yaml  serp_classification.yaml  services.yaml
docs/: calibration.md  current_state.md  data_retention.md  demand_model.md  deployment.md  discovery_architecture.md  discovery_deviations.md  discovery_exit_criteria.md  evidence_quality.md  hardening_baseline.md  hardening_deviations.md  implementation_deviations.md  lead_delivery_operations.md  lead_routing.md  market_prefilter.md  observability.md  opportunity_review.md  privacy.md  production_architecture.md  production_backlog.md  production_data.md  production_deviations.md  production_handoff.md  production_runbook.md  production_status.md  production_status.yaml  property_operations.md  provider_assignment.md  provider_suitability.md  public_data.md  release_checklist.md  scoring_v2.md  security.md  serp_classification.md  service_catalog.md  us_geography.md  workstream_d_operations.md  workstreams_jk_handoff.md
frontend/: eslint.config.mjs  package-lock.json  package.json
migrations/: env.py
scripts/: addressable_market.py  build_us_geography.py  check_licenses.py  create-release-manifest.sh  deploy.sh  docker-entrypoint.sh  public_data.py  release_manifest.py  rollback.sh
seeds/: location_gazetteer.us.yaml  locations.example.yaml  services.example.yaml
tests/: conftest.py
(+227 files in other folders)
